<resources>
    <string name="app_name">Money Management</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="home">Home</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="customize">Customize</string>
    <string name="about">About</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="str_continue">Continue</string>
    <string name="all">All</string>
    <string name="del">Delete</string>
    <string name="share">Share the App</string>
    <string name="preview">Preview</string>
    <string name="copy">Copy</string>
    <string name="clear">Clear</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="theme">Theme</string>
    <string name="error">Error</string>
    <string name="confirm">Confirm</string>
    <string name="apply">Apply</string>
    <string name="empty">Empty!</string>
    <string name="no_browser">No Browser</string>
    <string name="unknown_error_occurred">An unknown error occurred</string>
    <string name="my_gallery">My Gallery</string>
    <string name="update_now">Update now</string>
    <string name="des_update">Please, update app to new version to continue using</string>
    <string name="title_update">New version available</string>
    <string name="get_start">Get Started</string>
    <string name="welcome_to">Welcome to \nBase Project</string>
    <string name="go_to_setting">Go to setting</string>
    <string name="no_internet">No Internet</string>
    <string name="some_actions_arent_available_office_please_check_your_internet_connection">Some actions aren\'t available office. Please check your internet connection</string>
    <string name="crop">Crop</string>
    <string name="error_crop">Error Crop</string>
    <string name="finish">Press 1 more time to exit</string>
    <string name="channel_name">nmh_notify</string>
    <string name="channel_description">This is notify</string>
    <string name="this_action_can_contain_ads">This action may contain advertising</string>
    <string name="deny_per">Permission is required to use this function</string>
    <string name="setting">Setting</string>
    <string name="policy">Privacy Policy</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="chats">Chats</string>
    <string name="people">People</string>
    <string name="calls">Calls</string>
    <string name="search">Search</string>
    <string name="des_home">Choose your friend or create new contact to \n start your conversation</string>
    <string name="create_contact">Create Contact</string>
    <string name="title_onboarding_1">Smart Expense Tracking</string>
    <string name="des_onboarding_1">Effortless budgeting with an intuitive expense management system.</string>
    <string name="title_onboarding_2">Visual Financial Insights</string>
    <string name="des_onboarding_2">Interactive charts for clear and effective monthly financial reporting.</string>
    <string name="title_onboarding_3">Categorized Spending</string>
    <string name="des_onboarding_3">Organize your income with variable  structured spending categories.</string>
    <string name="title_onboarding_4">Loan &amp; Debt Control</string>
    <string name="des_onboarding_4">Keep your loans well-organized and easily manageable.</string>
    <string name="permission">Permission</string>
    <string name="permission_need">Permission Need</string>
    <string name="des_permission">To Video Call Allow <b>Base Project</b> Access To Your Camera</string>
    <string name="go">Go</string>
    <string name="per_overlay">You need overlay permission to use this app</string>
    <string name="deny_pers">Permissions is required to use this application</string>
    <string name="permissions_have_been_granted">Permissions have been granted!</string>
    <string name="skip">Skip</string>
    <string name="str_notify">Notification</string>
    <string name="str_record">Recorder</string>
    <string name="str_camera">Camera</string>
    <string name="str_draw">Draw overlay</string>
    <string name="str_storage">Storage</string>
    <string name="step_2">Step 3. Camera</string>
    <string name="step_3">Step 4. Draw overlay</string>
    <string name="step_4">Step 5. Storage</string>
    <string name="step_1">Step 2. Recorder</string>
    <string name="step_0">Step 1. Notification</string>
    <string name="you_can_select">You can select: </string>
    <string name="message_per_dialog">Click button Step to grant permission!</string>
    <string name="message_per_granted">Permission have been granted!</string>
    <string name="language">Change Language</string>
    <string name="privacy">Privacy</string>
    <string name="you_need_pick_a_language">You need pick a language</string>
    <string name="rate">Rate the App</string>
    <string name="may_be_later">Maybe later</string>
    <string name="rate_thanks">Rate in app</string>
    <string name="title_rate">How’s your experience so far?</string>
    <string name="des_rate_0">We’d love to know!</string>
    <string name="des_rate_1_2_3">Oh, no!</string>
    <string name="des_rate_4_5">We like you too</string>
    <string name="please_give_us_some_feedback">Please give us some feedback</string>
    <string name="thanks_for_your_feedback">Thanks for your feedback</string>
    <string name="thanks_for_rating">Thanks for rating!</string>
    <string name="back_to_home">Back to home?</string>
    <string name="we_will_return_you_to_the_previous_screen">We will return you to the \nprevious screen?</string>
    <string name="stay">Stay</string>
    <string name="exit">Exit</string>
    <string name="exit_the_app">Exit the app?</string>
    <string name="are_you_sure_to_exit_the_app">Are you sure to exit the app?</string>
    <string name="click_to_step_by_step_for_require_permission">Click to step by step for require permission</string>
    <string name="label_uninstall">Uninstall</string>
    <string name="title_keep_user">96% USERS CACULATED \nTHEIR LOAN PLANS ACCURATELY \nWITH OUR APP</string>
    <string name="des_keep_user">We handle millions of financial \ncalculations every day, easily calculate \nloan repayments, interest rates, and \nfind the best plan tailored to your \nneeds in just a few taps.</string>
    <string name="issues_encountered_during_usage">Issues encountered during usage</string>
    <string name="feature_does_not_working">Feature does not working</string>
    <string name="too_many_ads">Too many ads</string>
    <string name="i_do_not_need_it">I do not need it</string>
    <string name="uninstall">Uninstall</string>
    <string name="try_again">Try Again</string>
    <string name="still_want_to_uninstall">Still want to uninstall?</string>
    <string name="please_choose_issues">Please choose 1 issues</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="english">English</string>
    <string name="spanish">Español</string>
    <string name="french">Français</string>
    <string name="hindi">हिंदी</string>
    <string name="portuguese">Português</string>
    <string name="arabic">العربية</string>
    <string name="turkish">Türkçe</string>
    <string name="total_balance">Total balance</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_home">Home</string>
    <string name="str_statistics">Statistics</string>
    <string name="str_budget">Budget</string>
    <string name="str_setting">Settings</string>
    <string name="str_save">Save</string>
    <string name="str_expenses">Expenses</string>
    <string name="str_loan">Loan</string>
    <string name="str_amount">Amount</string>
    <string name="str_category">Category</string>
    <string name="str_note">Note</string>
    <string name="str_add_a_description">Add a description</string>
    <string name="food">Food</string>
    <string name="social">Social</string>
    <string name="traffic">Traffic</string>
    <string name="shopping">Shopping</string>
    <string name="grocery">Grocery</string>
    <string name="education">Education</string>
    <string name="bills">Bills</string>
    <string name="rentals">Rentals</string>
    <string name="medical">Medical</string>
    <string name="investment">Investment</string>
    <string name="gift">Gift</string>
    <string name="other">Other</string>
    <string name="str_income">Income</string>
    <string name="str_set_date">Set date</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_set_time">Set time</string>
    <string name="str_search">Search</string>
    <string name="add_your_first_expense_to_get_start">Add your first expense to get start!!</string>
    <string name="add_your_first_income_to_get_start">Add your first income to get start!!</string>
    <string name="add_your_first_loan_to_get_start">Add your first loan to get start!!</string>
    <string name="salary">Salary</string>
    <string name="invest">Invest</string>
    <string name="business">Business</string>
    <string name="interest">Interest</string>
    <string name="extra_income">Extra income</string>
    <string name="loan">Loan</string>
    <string name="borrow">Borrow</string>
    <string name="str_lender">Lender</string>
    <string name="str_borrower">Borrower</string>
    <string name="str_select_month">Select Month</string>
    <string name="str_this_month">This month</string>
    <string name="jan" translatable="true">Jan</string>
    <string name="feb" translatable="true">Feb</string>
    <string name="mar" translatable="true">Mar</string>
    <string name="apr" translatable="true">Apr</string>
    <string name="may" translatable="true">May</string>
    <string name="jun" translatable="true">Jun</string>
    <string name="jul" translatable="true">Jul</string>
    <string name="aug" translatable="true">Aug</string>
    <string name="sep" translatable="true">Sep</string>
    <string name="oct" translatable="true">Oct</string>
    <string name="nov" translatable="true">Nov</string>
    <string name="dec" translatable="true">Dec</string>
    <string name="save_succesfull">Saved successfully</string>
    <string name="edit_succesfull">Edit successfully</string>
    <string name="delete_fail">Delete fail</string>
    <string name="delete_succesfull">Delete successfully</string>
    <string name="total_expenditure">Total expenditure</string>
    <string name="str_edit">Edit</string>
    <string name="str_transaction">Transaction</string>
    <string name="delete_transaction">Delete Transaction</string>
    <string name="delete_this_transaction">Delete this transaction?</string>
    <string name="delete_this_budget">Delete this budget?</string>
    <string name="are_you_sure_you_want_to_delete_this_transaction">Are you sure you want to delete this transaction?</string>
    <string name="are_you_sure_you_want_to_delete_this_budget">Are you sure you want to delete this budget?</string>
    <string name="str_yes">Yes</string>
    <string name="no_data_found_please_try_again">No data found, please try again.</string>
    <string name="str_total">Total</string>
    <string name="str_expensed">Expensed</string>
    <string name="str_month">Month</string>
    <string name="str_expense">Expense</string>
    <string name="str_ballance">Ballance</string>
    <string name="str_budget_detail">Budget Detail</string>
    <string name="str_set_your_budget">Set your Budget</string>
    <string name="please_enter_your_net_worth_money_manager_will_help_you_navigate_your_money">Please enter your net worth, Money manager will help you navigate your money.</string>
    <string name="enter_your_net_worth">Enter your net worth</string>
    <string name="enter_your_budget">Enter your budget</string>
    <string name="remaining">Remaining</string>
    <string name="budget">Budget:</string>
</resources>