<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/ll_table"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_38sdp"
        android:orientation="horizontal"
        android:weightSum="6"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_month"
            style="@style/StyleTextViewMedium"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/_1sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_month"
            android:textColor="@color/color_001C41"
            android:textSize="@dimen/_9ssp" />

        <TextView
            android:id="@+id/tv_expenses"
            style="@style/StyleTextViewRegular"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/_1sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_expense"
            android:textColor="@color/color_001C41"
            android:textSize="@dimen/_9ssp" />

        <TextView
            android:id="@+id/tv_income"
            style="@style/StyleTextViewRegular"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/_1sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_income"
            android:textColor="@color/color_001C41"
            android:textSize="@dimen/_9ssp" />

        <TextView
            android:id="@+id/tv_loan"
            style="@style/StyleTextViewRegular"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/_1sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_loan"
            android:textColor="@color/color_001C41"
            android:textSize="@dimen/_9ssp" />

        <TextView
            android:id="@+id/tv_borrow"
            style="@style/StyleTextViewRegular"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/_1sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/borrow"
            android:textColor="@color/color_001C41"
            android:textSize="@dimen/_9ssp" />

        <TextView
            android:id="@+id/tv_balance"
            style="@style/StyleTextViewMedium"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/_1sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_ballance"
            android:textColor="@color/main_color"
            android:textSize="@dimen/_9ssp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginHorizontal="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:background="@color/color_B5D5FF"
        app:layout_constraintTop_toBottomOf="@id/ll_table" />

</androidx.constraintlayout.widget.ConstraintLayout>