<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/boder_dialog"
    android:paddingVertical="@dimen/_8sdp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/notosans_bold"
        android:text="@string/exit_the_app"
        android:textColor="@color/main_color"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvOutOfJuice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/notosans_regular"
        android:gravity="center"
        android:text="@string/are_you_sure_to_exit_the_app"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <TextView
        android:id="@+id/tvExit"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/bg_button_disable"
        android:fontFamily="@font/notosans_regular"
        android:gravity="center"
        android:text="@string/exit"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toStartOf="@id/tvStay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvOutOfJuice" />

    <TextView
        android:id="@+id/tvStay"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/bg_button_enable"
        android:fontFamily="@font/notosans_regular"
        android:gravity="center"
        android:text="@string/stay"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvExit"
        app:layout_constraintTop_toBottomOf="@id/tvOutOfJuice" />
</androidx.constraintlayout.widget.ConstraintLayout>