<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_55sdp"
        android:fontFamily="@font/notosans_bold"
        android:gravity="center"
        android:text="@string/title_keep_user"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:fontFamily="@font/notosans_regular"
        android:gravity="center"
        android:text="@string/des_keep_user"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnTryAgain"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/bg_button_enable"
        android:fontFamily="@font/barlow_semibold"
        android:gravity="center"
        android:text="@string/try_again"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintTop_toBottomOf="@id/tvDes" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvStill"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/barlow_semibold"
        android:gravity="center"
        android:text="@string/still_want_to_uninstall"
        android:textColor="@color/color_787F87"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintTop_toBottomOf="@id/btnTryAgain" />

    <FrameLayout
        android:id="@+id/layout_native"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <FrameLayout
            android:id="@+id/frAds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp">

            <include layout="@layout/native_bot_horizontal_media_left_loading" />
        </FrameLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
