<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet"
    android:paddingBottom="@dimen/_16sdp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btn"
        android:layout_width="@dimen/_28sdp"
        android:layout_height="@dimen/_28sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:padding="@dimen/_5sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivExit"
        android:layout_width="@dimen/_28sdp"
        android:layout_height="@dimen/_28sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:padding="@dimen/_8sdp"
        android:src="@drawable/ic_exit"
        app:layout_constraintBottom_toBottomOf="@id/btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:fontFamily="@font/notosans_bold"
        android:gravity="center"
        android:text="@string/permission"
        android:textColor="@color/black"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/ivExit"
        app:layout_constraintStart_toEndOf="@id/btn"
        app:layout_constraintTop_toTopOf="@id/ivExit" />

    <HorizontalScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@id/ivExit">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingEnd="@dimen/_8sdp">

            <TextView
                android:id="@+id/tvNotify"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_34sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:fontFamily="@font/notosans_regular"
                android:gravity="center"
                android:paddingHorizontal="@dimen/_8sdp"
                android:text="@string/step_0"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp" />

            <TextView
                android:id="@+id/tvRecord"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_34sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:fontFamily="@font/notosans_regular"
                android:gravity="center"
                android:paddingHorizontal="@dimen/_8sdp"
                android:text="@string/step_1"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp" />

            <TextView
                android:id="@+id/tvCamera"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_34sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:fontFamily="@font/notosans_regular"
                android:gravity="center"
                android:paddingHorizontal="@dimen/_8sdp"
                android:text="@string/step_2"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp" />

            <TextView
                android:id="@+id/tvDraw"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_34sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:fontFamily="@font/notosans_regular"
                android:gravity="center"
                android:paddingHorizontal="@dimen/_8sdp"
                android:text="@string/step_3"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp" />

            <TextView
                android:id="@+id/tvStorage"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_34sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:fontFamily="@font/notosans_regular"
                android:gravity="center"
                android:paddingHorizontal="@dimen/_8sdp"
                android:text="@string/step_4"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp" />
        </LinearLayout>
    </HorizontalScrollView>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv"
        android:layout_width="@dimen/_134sdp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:src="@drawable/img_per_blue"
        app:layout_constraintDimensionRatio="170:120"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scroll" />

    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:fontFamily="@font/notosans_regular"
        android:gravity="center"
        android:text="@string/des_permission"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintTop_toBottomOf="@id/iv" />

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/btn_stroke"
        app:layout_constraintDimensionRatio="328:52"
        app:layout_constraintTop_toBottomOf="@id/tv">

        <TextView
            android:id="@+id/tvPer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_16sdp"
            android:text="@string/you_can_select"
            android:fontFamily="@font/notosans_regular"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp" />

        <com.nmh.base.project.customView.CustomSwitch
            android:id="@+id/sc"
            android:layout_width="@dimen/_48sdp"
            android:layout_height="@dimen/_28sdp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_16sdp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_native"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        app:layout_constraintTop_toBottomOf="@id/rl">

        <FrameLayout
            android:id="@+id/fr_native_ads"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include layout="@layout/native_bot_horizontal_media_left_loading" />
        </FrameLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>